:lipstick: fix proposal layout on mobile (#457)

--- a/src/screens/organizer/proposal/proposal.css
+++ b/src/screens/organizer/proposal/proposal.css
@@ -49,8 +49,12 @@
     grid-template-rows: auto;
     grid-template-areas:
       'proposal-ratings'
-      'proposal-sidebar'
-      'proposal-talk';
+      'proposal-talk'
+      'proposal-speakers';
+  }
+
+  .proposal-actions {
+    display: none;
   }
 
   .proposal .card {
